# task_lab05

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md
tests/: test1.cpp
